gitops/ocp-network-obs/np-allow-netobserv.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-netobserv
  namespace: openshift-monitoring
  labels:
    app: netobserv
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: thanos-querier
  ingress:
    - ports:
        - protocol: TCP
          port: 9091
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: netobserv
  policyTypes:
    - Ingress
